--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<spring.groupId>org.springframework</spring.groupId>
 		<spring.version>4.1.6.RELEASE</spring.version>
+		<spring.data.version>1.6.0.RELEASE</spring.data.version>
 		<!-- mysql 驱动 -->
 		<jdbc.driver.groupId>mysql</jdbc.driver.groupId>
 		<jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
@@ -19,6 +20,8 @@
 		<connection.pool.groupId>com.mchange</connection.pool.groupId>
 		<connection.pool.artifactId>c3p0</connection.pool.artifactId>
 		<connection.pool.version>0.9.5</connection.pool.version>
+		<jstl.version>1.2</jstl.version>
+		<jsp-api.version>2.2</jsp-api.version>
 	</properties>
 
 	<dependencies>
@@ -77,6 +80,24 @@
 		</dependency>
 		<!-- spring end -->
 		
+		<!-- spring data start-->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>${spring.data.version}</version>
+		</dependency>
+		
+		<!-- spring data end -->
+		
+		<!-- redis start -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		
+		<!-- redis end -->
+		
 		<!-- jdbc driver -->
 		<dependency>
 			<groupId>${jdbc.driver.groupId}</groupId>
@@ -96,6 +117,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
 		</dependency>
 		
 	</dependencies>
