mybatis单独使用配置

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,16 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://localhost:3306/aroundspring
-dataSource.username=root
-dataSource.password=root
+
+#home
+home.dataSource.url=jdbc:mysql://localhost:3306/aroundspring
+home.dataSource.username=root
+home.dataSource.password=root
+
+#company
+company.dataSource.url=jdbc:mysql://localhost:3306/aroundspring
+company.dataSource.username=root
+company.dataSource.password=root
+
+
 dataSource.maxActive=200
 dataSource.maxIdle=50
 dataSource.maxWait=10000
