--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<jstl.version>1.2</jstl.version>
 		<jsp-api.version>2.2</jsp-api.version>
 		<logback.version>1.1.3</logback.version>
+		<mongo.java.driver.version>3.2.1</mongo.java.driver.version>
+        <spring.data.mongodb.version>1.8.2.RELEASE</spring.data.mongodb.version>
 	</properties>
 
 	<dependencies>
@@ -87,6 +89,30 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<!-- spring end -->
+		
+		<!-- spring整合mongodb的包 20160127start -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo.java.driver.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.8.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb-cross-store</artifactId>
+            <version>1.8.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb-log4j</artifactId>
+            <version>1.8.2.RELEASE</version>
+        </dependency>
+        <!-- spring整合mongodb的包 20160127end -->
 		
 		<!-- spring data start-->
 		<dependency>
