--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 		<logback.version>1.1.3</logback.version>
 		<mongo.java.driver.version>3.2.1</mongo.java.driver.version>
         <spring.data.mongodb.version>1.8.2.RELEASE</spring.data.mongodb.version>
+        <activemq.core.version>5.7.0</activemq.core.version>
+        <org.javassist.version>3.20.0-GA</org.javassist.version>
+        <!--CXF-->
+        <cxf.version>2.6.1</cxf.version>
 	</properties>
 
 	<dependencies>
@@ -89,6 +93,73 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<!-- spring end -->
+		
+		<!--dubbo start-->
+       <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.3</version>
+           <!--移除dubbo依赖的spring，防止jar包冲突-->
+           <exclusions>
+               <exclusion>
+                   <artifactId>spring</artifactId>
+                   <groupId>org.springframework</groupId>
+               </exclusion>
+           </exclusions>
+       </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.7</version>
+            <!--要去掉自带的log4j不然会默认的版本依赖jms-1.1.jar jmxtools-1.2.1.jar jmxri-1.2.jar-->
+            <!--<exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${org.javassist.version}</version>
+        </dependency>
+        
+        <dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-frontend-simple</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-transports-http</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+        <!--dubbo end-->
+		
+		<!--jms start -->
+        <!-- <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>${activemq.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+            <version>5.13.0</version>
+        </dependency> -->
+        <!--jms end -->
 		
 		<!-- spring整合mongodb的包 20160127start -->
         <dependency>
