--- a/pom.xml
+++ b/pom.xml
@@ -248,11 +248,11 @@
 		</dependency>
 		<!-- ehcache -->
 		
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.servlet.jsp.jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -266,6 +266,12 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.2.1</version>
+		</dependency>
 		
 	</dependencies>
 	<build>
