--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -10,6 +10,7 @@
 driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/aroundspring
 username=root
+password=root
 maxTotal=100
 minIdle=10
 maxIdle=50
