--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,16 +1,16 @@
 #datasource
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/aroundspring
-#jdbc.username=root
-#jdbc.password=root
-#jdbc.maxTotal=100
-#jdbc.minIdle=10
-#jdbc.maxIdle=50
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/aroundspring
+jdbc.username=root
+jdbc.password=root
+jdbc.maxTotal=100
+jdbc.minIdle=10
+jdbc.maxIdle=50
 
-driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/aroundspring
-username=root
-password=root
-maxTotal=100
-minIdle=10
-maxIdle=50
+#driverClassName=com.mysql.jdbc.Driver
+#url=jdbc:mysql://localhost:3306/aroundspring
+#username=root
+#password=root
+#maxTotal=100
+#minIdle=10
+#maxIdle=50
