添加集群配置

--- a/src/main/resources/properties/redis.properties
+++ b/src/main/resources/properties/redis.properties
@@ -8,3 +8,10 @@ poolConfig.maxWaitMillis=10000
 
 #cacheManager
 expireTime=300
+
+#cluster
+cluster.Node0.hostName=localhost
+cluster.Node0.port=6379
+
+#cluster.Node1.hostName=localhost
+#cluster.Node1.port=6379
