--- a/pom.xml
+++ b/pom.xml
@@ -305,7 +305,22 @@
 			<artifactId>rxjava</artifactId>
 			<version>1.2.1</version>
 		</dependency>
-		
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>aroundspring</finalName>
