--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,15 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+            <plugin>
+                <!--WAR包插件用于抑制Maven找不到我们项目中的web.xml文件报错-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
