--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
             <scope>provided</scope>
         </dependency>
 
-
+		<!--zookeeper-->
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
+			<version>2.9.1</version>
+		</dependency>
 
         <!-- tomcat jstl -->
         <dependency>
